Bug 447776 – Hang with word-wrap: break-word and width: 0px with testcase and crashtests p=smontagu r/sr=roc